[package]
name = "ingram"
version = "0.0.1"
authors = ["Matthias Hecker <mail@mattzq.com>"]
edition = "2018"

[lib]
name = "ingram"
crate-type = ["cdylib"]

[dependencies]
unicode-segmentation = "1.7.1"
pyo3 = "0.13.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
